archive/observability/victoria-metrics-server/app/vm-agent-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-agent-route
  namespace: observability
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: gateway-system
  hostnames:
    - vm-agent.serhii.link
    - vm-agent.home
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: vmagent-main-agent
          port: 8429
          weight: 1
